--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name:     Twenty Thirteen Child
 Theme URI:      http://example.com/
-Description:    Child theme for the Twenty Thirteen theme
-Author:         Your name here
+Description:    Ruby Gettinger
+Author:         Kelsey Huebner
 Author URI:     http://example.com/about/
 Template:       twentythirteen
 Version:        0.1.0
