--- a/style.css
+++ b/style.css
@@ -9,3 +9,64 @@ Version:        0.1.0
 */
 
 @import url("../responsive/style.css");
+
+/*
+Welcome to Custom CSS!
+
+CSS (Cascading Style Sheets) is a kind of code that tells the browser how
+to render a web page. You may delete these comments and get started with
+your customizations.
+
+By default, your stylesheet will be loaded after the theme stylesheets,
+which means that your rules can take precedence and override the theme CSS
+rules. Just write here what you want to change, you don't need to copy all
+your theme's stylesheet content.
+*/
+
+
+ul {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+
+h2 {
+	text-align: left;
+	font-family: 'PT Sans', sans-serif;
+	font-size: 1.7em;
+	color: #60b224;
+	font-weight: bold;
+	overflow: hidden;
+}
+
+h3 {
+	color: #a5007e;
+	font-size: 1.2em;
+}
+
+p {
+	color: #383838;
+	font-family: 'PT Serif', serif;
+}
+
+a {
+	color: #a5007e;
+	text-decoration: none;
+}
+
+#topBar {
+	background-color: #a5007e;
+	height: 10%;
+	width: 100%;
+	text-align: right;
+}
+
+#topBar ul {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+
+#topBar ul li {
+	display: inline;
+}
