--- a/style.css
+++ b/style.css
@@ -32,8 +32,7 @@ ul {
 
 h1 {
 	font-family: 'PT Sans', sans-serif;
-	font-size: 1.7em;
-	color: #a5007e;
+	color: #60b224e;
 	font-weight: bold;
 	overflow: hidden;
 }
