--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ ul {
 
 h1 {
 	font-family: 'PT Sans', sans-serif;
-	color: #60b224e;
+	color: #60b224;
 	font-weight: bold;
 	overflow: hidden;
 }
