--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ a {
 	display: inline;
 }
 
+#wrapper {
+	background:none;
+}
+
 @media screen and (max-width:480px) {
 	#topBar ul li img {
 		width: 30px;
