Updated logo and nav styles

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ a:current {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
+	width:100%;
 }
 
 #topBar ul li {
@@ -226,6 +227,13 @@ iframe {
 	text-align: left;
 	margin-left: 15%;
 	width: 40%;
+}
+
+#logo{
+	width: 50%;
+	position: relative;
+	z-index: 100;
+	margin-top:-30px;
 }
 
 #bodyContainer {
