--- a/style.css
+++ b/style.css
@@ -96,18 +96,6 @@ a:current {
 	}
 }
 
-/*
-Welcome to Custom CSS!
-
-CSS (Cascading Style Sheets) is a kind of code that tells the browser how
-to render a web page. You may delete these comments and get started with
-your customizations.
-
-By default, your stylesheet will be loaded after the theme stylesheets,
-which means that your rules can take precedence and override the theme CSS
-rules. Just write here what you want to change, you don't need to copy all
-your theme's stylesheet content.
-*/
 body {
 	font-size: 100%;
 	margin: 0;
@@ -357,4 +345,184 @@ HIDE NAVIGATION ON VOTE PAGE
 #yop-poll-answer-39, label[for=yop-poll-answer-39],
 #yop-poll-answer-40, label[for=yop-poll-answer-40] {
 	display: none;
+}
+
+/*	ADSENSE CODE	*/
+.adsbygoogle iframe {
+  height: 100%;
+}
+
+#text-4 .textwidget {
+  margin-left: 7px;
+}
+
+body.custom-background {
+  background: white;
+  height: 100%;
+  /* IE6-9 */
+  background: url("http://rubygettinger.net/assets/sites/23/2013/11/ruby_background_faith_emotional_god_physical_trust_dream_powerful_hope_outlines.png");
+}
+
+.menu a:hover {
+  background-color: white;
+  background-image: none;
+  color: #a5007e;
+}
+
+.js .main-nav {
+  background-image: none;
+  background-color: #A5007E;
+  margin-top: 20px;
+}
+
+a:hover {
+  color: #a5007e;
+}
+
+@media (min-width: 321px) and (max-width: 768px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  .social-media-menu img {
+    width: 30px;
+  }
+}
+.widget-wrapper widget_twitter_timeline {
+  min-height: 300px;
+}
+
+#twitter_timeline-2 {
+  min-height: 300px;
+}
+
+#twitter_timeline-2 iframe {
+  height: 300px;
+}
+
+.testimonial {
+  background-color: white;
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+  padding: 20px 10px 10px 20px;
+  margin-bottom: 10px;
+}
+
+.hr_nav {
+  float: right;
+  width: 49%;
+}
+
+.fancybox-title-over {
+  display: none;
+  z-index: 0;
+}
+
+#fancybox-title {
+  display: none;
+  z-index: 0;
+}
+
+hr {
+  background: none repeat scroll 0 0 #FFAFEC;
+  height: 3px;
+}
+
+#container {
+  box-shadow: 1px 2px 7px #CCC;
+  background-color: white;
+}
+
+.menu a {
+  font-size: 1em;
+}
+
+#logo {
+  width: 25%;
+  margin-top: -20px;
+  margin-bottom: -30px;
+}
+
+.main-nav {
+  width: 75%;
+  margin-top: 37px;
+}
+
+.navpaged, .navboth {
+  padding: 0 0 40px;
+}
+
+.post-data {
+  display: none;
+}
+
+.read-more {
+  clear: none;
+}
+
+#meteor-slideshowhomepage .mslide p {
+  position: absolute;
+  margin-top: -30px;
+  line-height: 14px;
+}
+#meteor-slideshowhomepage .mslide #slideshow-exerpt-wrap {
+  background-color: rgba(65, 64, 65, 0.2);
+}
+#meteor-slideshowhomepage #slideshow-exerpt-wrap .read-more {
+  display: none;
+}
+
+img.attachment-thumbnail {
+  float: left;
+  margin-right: 2%;
+  border: 3px solid #A5007E;
+}
+
+hr, dl, pre, form, table, address, blockquote {
+  margin: 1em 0;
+}
+
+h1 {
+  overflow: visible;
+}
+
+h2 {
+  margin: 0;
+  overflow: visible;
+  font-size: 2.1em;
+}
+
+.title-archive {
+  display: none;
+}
+
+p {
+  margin: 0px;
+}
+
+input[type="submit"] {
+  margin-top: 10px;
+}
+
+.post-entry p {
+  padding-top: 10px;
+}
+
+@media (max-width: 1024px) {
+  .col-300 {
+    width: 100%;
+  }
+
+  .col-620 {
+    width: 90%;
+    padding: 0 5%;
+  }
+}
+.home .bio-text p {
+  margin: 10px 5px;
+}
+
+.home .blog-wrap {
+  display: none;
+}
+
+.bbp-topic-form {
+  display: none;
 }
